@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-16-4
+DATE: 09/09/2020
+STAFF: lec
+added littriageload.pdf.log
+
 TAG: littriageload-6-0-16-3
 DATE: 08/24/2020
 STAFF: jak
